# yash-a2a

yash-unified-mdoc-user-story-a2a-server-dev/: .dockerignore  .env.example  .gitignore  Dockerfile  DockerfileLambda  README.md  app.py  pyproject-freeze.toml  pyproject.toml  requirements-freeze.txt
yash-unified-mdoc-user-story-a2a-server-dev/.github/: config.yaml
yash-unified-mdoc-user-story-a2a-server-dev/.github/workflows/: cd.yaml  ci.yaml  sonarscan.yaml
yash-unified-mdoc-user-story-a2a-server-dev/agents/: tool.py
yash-unified-mdoc-user-story-a2a-server-dev/agents/mdoc_user_story/: agent.py  lambda_function.py  main.py  task_manager.py
yash-unified-mdoc-user-story-a2a-server-dev/agents/obligation_user_story/: __main__.py  agent.py  main.py  task_manager.py
yash-unified-mdoc-user-story-a2a-server-dev/common/: types.py
yash-unified-mdoc-user-story-a2a-server-dev/common/server/: server.py  task_manager.py
yash-unified-mdoc-user-story-a2a-server-dev/helm/: values.yaml
yash-unified-mdoc-user-story-a2a-server-dev/tools-data/user_story/: mcp_server.py
yash-unified-mdoc-user-story-a2a-server-dev/utils/: config.py  event_messages.py
